# financial-bytes

./: .env.template  .gitignore  Makefile  README.md  portfolios.json.example  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_multi_portfolio.py  003_fix_unique_constraints.py  004_drop_old_report_date_unique.py  005_portfolio_performance.py  006_pipeline_runs.py
data/: earnings_calendar.json  reminders.json
docs/: ticker-report.md
src/: cli.py  config.py  scheduler.py
src/agents/: analyst_agent.py  director_agent.py  fullstack_agent.py  managing_director_agent.py  quant_agent.py
src/alerts/: dynamic_stops.py  stop_loss.py
src/api/: endpoints.py  massive_client.py  models.py
src/db/: models.py  session.py
src/delivery/: email_sender.py
src/newsletter/: generator.py  pdf_renderer.py
src/pipeline/: main_pipeline.py  ticker_pipeline.py
src/portfolio/: dividends.py  earnings_calendar.py  earnings_check.py  fidelity_reader.py  models.py  performance.py  plaid_reader.py  portfolio_config.py  premarket_check.py  reader.py  reminders.py  tax_calculator.py  transaction_reader.py
src/scrapers/: _utils.py  base_scraper.py  cnbc_scraper.py  finviz_scraper.py  google_news_scraper.py  marketwatch_scraper.py  morningstar_scraper.py  reuters_scraper.py  scraper_orchestrator.py  seeking_alpha_scraper.py  user_agents.py  web_search_fallback.py  yahoo_finance_data.py  (+1 more)
tests/: conftest.py  test_agents.py  test_api.py  test_new_modules.py  test_newsletter.py  test_portfolio.py  test_scraper.py  test_scraper_fixes.py
(+10 files in other folders)
