[tool.poetry]
name = "financial-bytes"
version = "0.1.0"
description = "Automated daily stock portfolio newsletter powered by AI agents"
authors = ["nbossn"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
anthropic = "^0.49"
playwright = "^1.44"
selenium = "^4.21"
webdriver-manager = "^4.0"
beautifulsoup4 = "^4.12"
lxml = "^5.2"
httpx = "^0.27"
sqlalchemy = "^2.0"
alembic = "^1.13"
psycopg2-binary = "^2.9"
pydantic = "^2.7"
pydantic-settings = "^2.3"
jinja2 = "^3.1"
apscheduler = "^3.10"
python-dotenv = "^1.0"
weasyprint = "^62"
pydyf = "^0.11.0"
loguru = "^0.7"
click = "^8.1"
tenacity = "^8.3"
aiohttp = "^3.9"
python-dateutil = "^2.9"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
respx = "^0.21"
responses = "^0.25"
pip-audit = "^2.7"
black = "^24.4"
ruff = "^0.4"

[tool.poetry.scripts]
financial-bytes = "src.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
